FLY wire David/force-app/main/default/objects/Credit_Risk__c/Credit_Risk__c.object-meta.xml
<CustomObject>
    <description>Credit Risk Object for theCompliance/Credit Risk team to store information around credit risk processing.</description>
    <label>Credit Risk</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Credit Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Risk&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>