FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master detail link to the Account</description>
    <inlineHelpText>Link to Account Record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Risk&apos;s</relationshipLabel>
    <relationshipName>Credit_Risk_s</relationshipName>
    <type>Lookup</type>
</CustomField>