FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit risk team member who is the analyst for this record.</description>
    <inlineHelpText>Name of Analyst</inlineHelpText>
    <label>Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Risk_Analyst</relationshipName>
    <type>Lookup</type>
</CustomField>