FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Avg_PMNT_Size_Approved__c.field-meta.xml
<CustomField>
    <fullName>Avg_PMNT_Size_Approved__c</fullName>
    <description>Represents the average payment value the client accepts on cards.</description>
    <inlineHelpText>Represents the average payment value the client accepts on cards.</inlineHelpText>
    <label>Avg PMNT Size Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>