FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Conditional_Approval_Documents__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Approval_Documents__c</fullName>
    <description>For CR to enter the documents required for credit reassessment. SAL-2307</description>
    <inlineHelpText>Documents required for credit reassessment</inlineHelpText>
    <label>Conditional Approval Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Cash Flow Statement</fullName>
            </value>
            <value>
                <fullName>Bank Statements</fullName>
            </value>
            <value>
                <fullName>Interim Financial Statements</fullName>
            </value>
            <value>
                <fullName>Management Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>