FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Credit_Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Status__c</fullName>
    <description>The current credit risk status of the account.</description>
    <inlineHelpText>The current credit risk status of the account.</inlineHelpText>
    <label>Credit Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Conditionally Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>In Queue for CR Review</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Withdrawn - 60+ Days Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>