FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>The date the file was approved by credit risk.</description>
    <inlineHelpText>Enter the date the file was approved by credit risk.</inlineHelpText>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>