FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>The date the file was sent to credit risk for review.</description>
    <inlineHelpText>Enter the date the file was sent to credit risk for review.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>