FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Reason prospect/client was declined.</description>
    <inlineHelpText>Reason prospect/client was declined.</inlineHelpText>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient financial support</fullName>
            </value>
            <value>
                <fullName>Resticted business model</fullName>
            </value>
            <value>
                <fullName>Prohibited business model</fullName>
            </value>
            <value>
                <fullName>Excessive chargebacks</fullName>
            </value>
            <value>
                <fullName>Excessive refunds</fullName>
            </value>
            <value>
                <fullName>Prohibited trading country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>