FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Document_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Document_Financial_Year__c</fullName>
    <description>For CR to enter the date of the financial year-end SAL-2307</description>
    <inlineHelpText>Enter the date of the financial year-end</inlineHelpText>
    <label>Document Financial Year</label>
    <type>Date</type>
</CustomField>