FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_2nd_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_2nd_Trading_Name__c</fullName>
    <inlineHelpText>Secondary pseudonym used by companies that do not operate under their registered company name</inlineHelpText>
    <label>KYC 2nd Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>