FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Accept_Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>KYC_Accept_Advance_Payments__c</fullName>
    <label>KYC Accept Advance Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>