FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Advance_Payment_2_Type_Accepted__c.field-meta.xml
<CustomField>
    <fullName>KYC_Advance_Payment_2_Type_Accepted__c</fullName>
    <label>KYC Advance Payment 2 Type Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>