FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Advance_Payments_2_Process_Volume__c.field-meta.xml
<CustomField>
    <fullName>KYC_Advance_Payments_2_Process_Volume__c</fullName>
    <label>KYC Advance Payments 2 % Process Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>