FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Advance_Pymts_1_Days_Accepted_Final__c.field-meta.xml
<CustomField>
    <fullName>KYC_Advance_Pymts_1_Days_Accepted_Final__c</fullName>
    <label>KYC Advance Pymts 1 Days Accepted Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>