FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Annual_Money_Moved_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>KYC_Annual_Money_Moved_Credit_Cards__c</fullName>
    <label>KYC Annual Money Moved Credit Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>