FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Application__c.field-meta.xml
<CustomField>
    <fullName>KYC_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related KYC Application record</description>
    <inlineHelpText>Related KYC Application record</inlineHelpText>
    <label>KYC Application</label>
    <referenceTo>KYC_Application__c</referenceTo>
    <relationshipLabel>Credit Risk</relationshipLabel>
    <relationshipName>Credit_Risk_s</relationshipName>
    <type>Lookup</type>
</CustomField>