FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Application_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>KYC_Application_Long_ID__c</fullName>
    <inlineHelpText>Unique Passfort Identifier for KYC application</inlineHelpText>
    <label>KYC Application Long ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>