FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Application_Status__c</fullName>
    <description>The current status of the related KYC Application.</description>
    <formula>KYC_Application__r.Status__c</formula>
    <inlineHelpText>Application applied (submitted but not reviewed for KYC), In Review (KYC in process of reviewing), Approved, Rejected (account declined prior to accepting application), Cancelled (Account Services discontinued after application was initally reviewed)</inlineHelpText>
    <label>KYC Application Status</label>
    <type>Text</type>
</CustomField>