FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Associate_DOB__c.field-meta.xml
<CustomField>
    <fullName>KYC_Associate_DOB__c</fullName>
    <label>KYC Associate DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>