FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Associate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Associate_Last_Name__c</fullName>
    <label>KYC Associate Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>