FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Bank_Account_Name__c</fullName>
    <inlineHelpText>Account Holder Name for Bank Account Submitted</inlineHelpText>
    <label>KYC Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>