FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Bank_BICSWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>KYC_Bank_BICSWIFT_Code__c</fullName>
    <inlineHelpText>Bank codes facilitate money transfers between banks</inlineHelpText>
    <label>KYC Bank BIC/SWIFT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>