FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Bank_IBAN__c.field-meta.xml
<CustomField>
    <fullName>KYC_Bank_IBAN__c</fullName>
    <inlineHelpText>Standard international numbering system developed to identify an overseas bank account</inlineHelpText>
    <label>KYC Bank IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>