FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Business_Owner_at_25__c.field-meta.xml
<CustomField>
    <fullName>KYC_Business_Owner_at_25__c</fullName>
    <inlineHelpText>Compliance verifies natural persons with direct or indirect share in the company 25%+</inlineHelpText>
    <label>KYC Business Owner at 25%</label>
    <length>255</length>
    <type>Text</type>
</CustomField>