FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Company_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Company_Legal_Name__c</fullName>
    <inlineHelpText>The name that appears on the formation document of a corporation, LLC, LP or other statutory business entity</inlineHelpText>
    <label>KYC Company Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>