FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>KYC_Company_Number__c</fullName>
    <inlineHelpText>Registration number provided to applicant by overseeing country, state, province, etc.</inlineHelpText>
    <label>KYC Company Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>