FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Complex_Structure__c.field-meta.xml
<CustomField>
    <fullName>KYC_Complex_Structure__c</fullName>
    <inlineHelpText>A business with more than 3 levels of owners between the business and its natural person owner with 25%+ interest</inlineHelpText>
    <label>KYC Complex Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>