FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>KYC_Contact_Email_Address__c</fullName>
    <inlineHelpText>Email address for sales person&apos;s point of contact</inlineHelpText>
    <label>KYC Contact Email Address</label>
    <type>Email</type>
</CustomField>