FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Countries_of_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>KYC_Countries_of_Final_Destination__c</fullName>
    <label>KYC Countries of Final Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>