FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Country_1_Payment_Origin__c.field-meta.xml
<CustomField>
    <fullName>KYC_Country_1_Payment_Origin__c</fullName>
    <label>KYC Country 1 Payment Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>