FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Country_3_Transaction_percent__c.field-meta.xml
<CustomField>
    <fullName>KYC_Country_3_Transaction_percent__c</fullName>
    <inlineHelpText>Name of country where funds will be received or sent (top 5 countries with most transaction volume)</inlineHelpText>
    <label>KYC Country 3 Transaction %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>