FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Credit_Card_Currency__c.field-meta.xml
<CustomField>
    <fullName>KYC_Credit_Card_Currency__c</fullName>
    <inlineHelpText>The country that appears on the formation document of a corporation, LLC, LP or other statutory business entity</inlineHelpText>
    <label>KYC Credit Card Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>