FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Currency__c.field-meta.xml
<CustomField>
    <fullName>KYC_Currency__c</fullName>
    <label>KYC Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>