FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>KYC_Entity_Type__c</fullName>
    <inlineHelpText>Category of business structure: private, public, non-profit/charity, sole trader/sole proprietor</inlineHelpText>
    <label>KYC Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>