FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_FinalOne_Time_1_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>KYC_FinalOne_Time_1_Other_Payments__c</fullName>
    <label>KYC Final/One Time 1 Other Pymnts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>