FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_FinalOne_Time_2_Other_Pymnts__c.field-meta.xml
<CustomField>
    <fullName>KYC_FinalOne_Time_2_Other_Pymnts__c</fullName>
    <label>KYC Final/One Time 2 Other Pymnts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>