FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_FinalOne_Time_2_Pymnt_Collection__c.field-meta.xml
<CustomField>
    <fullName>KYC_FinalOne_Time_2_Pymnt_Collection__c</fullName>
    <label>KYC Final/One Time 2 Pymnt Collection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>