FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_First_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_First_Decision_Date__c</fullName>
    <description>The first decision date from the related KYC Application record.</description>
    <formula>KYC_Application__r.First_Decision_Date__c</formula>
    <inlineHelpText>Initial automated approval, review, or declination decision from PF based on initial application information entered</inlineHelpText>
    <label>KYC First Decision Date</label>
    <type>DateTime</type>
</CustomField>