FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Flag__c.field-meta.xml
<CustomField>
    <fullName>KYC_Flag__c</fullName>
    <description>Current flag on related KYC Application.</description>
    <formula>KYC_Application__r.Flag__c</formula>
    <inlineHelpText>Current flag on related KYC Application.</inlineHelpText>
    <label>KYC Flag</label>
    <type>Text</type>
</CustomField>