FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Flywire_Entity__c.field-meta.xml
<CustomField>
    <fullName>KYC_Flywire_Entity__c</fullName>
    <inlineHelpText>The Flywire corporate entity that the applicant will contract with</inlineHelpText>
    <label>KYC Flywire Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>