FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Incorportation_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Incorportation_Date__c</fullName>
    <inlineHelpText>Date that the applicant&apos;s business was incoporated</inlineHelpText>
    <label>KYC Incorportation Date</label>
    <type>Date</type>
</CustomField>