FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Max_Payment_Size__c.field-meta.xml
<CustomField>
    <fullName>KYC_Max_Payment_Size__c</fullName>
    <inlineHelpText>The maximum payment size that the applicants payer will make</inlineHelpText>
    <label>KYC Max Payment Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>