FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_MLRODelegate_High_Risk_Approver__c.field-meta.xml
<CustomField>
    <fullName>KYC_MLRODelegate_High_Risk_Approver__c</fullName>
    <inlineHelpText>Name of Money Laundering Risk Officer or Delegate that approves high risk application</inlineHelpText>
    <label>KYC MLRO-Delegate High Risk Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>