FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Open_Loop_Verified__c.field-meta.xml
<CustomField>
    <fullName>KYC_Open_Loop_Verified__c</fullName>
    <inlineHelpText>Transactions between accounts, cards, or parties that don&apos;t belong to the same financial institution</inlineHelpText>
    <label>KYC Open Loop Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>