FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Orbis_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>KYC_Orbis_Tax_ID__c</fullName>
    <inlineHelpText>Number issued by IRS, Social Security Administration, or other Customs (VAT) authority</inlineHelpText>
    <label>KYC Orbis Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>