FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Other_Advance_Payments_1__c.field-meta.xml
<CustomField>
    <fullName>KYC_Other_Advance_Payments_1__c</fullName>
    <label>KYC Other Advance Payments 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>