FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Peak_Processing_Months__c.field-meta.xml
<CustomField>
    <fullName>KYC_Peak_Processing_Months__c</fullName>
    <label>KYC Peak Processing Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>