FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_PEP_Risk__c.field-meta.xml
<CustomField>
    <fullName>KYC_PEP_Risk__c</fullName>
    <inlineHelpText>Risk score for trustee, director, UBO, or authorized party that who holds or has held a significant public position</inlineHelpText>
    <label>KYC PEP Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>