FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Product_Name__c</fullName>
    <inlineHelpText>Client, Education agent or Payment partner</inlineHelpText>
    <label>KYC Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>