FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Projected_Pymnts_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>KYC_Projected_Pymnts_Next_12_Months__c</fullName>
    <inlineHelpText>Estimated tally of payments applicant expects over the next 12 months</inlineHelpText>
    <label>KYC Projected Pymnts Next 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>