FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Purpose_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>KYC_Purpose_of_Payments__c</fullName>
    <inlineHelpText>Description of payments filtering through Flywire - tuition/fees, travel accommodations, vendor payments, etc.</inlineHelpText>
    <label>KYC Purpose of Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>