FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_RefundCancellation_Terms__c.field-meta.xml
<CustomField>
    <fullName>KYC_RefundCancellation_Terms__c</fullName>
    <label>KYC Refund/Cancellation Terms</label>
    <type>Url</type>
</CustomField>