FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>KYC_Tax_ID_Number__c</fullName>
    <inlineHelpText>Number issued by IRS, Social Security Administration, or other Customs (VAT) authority</inlineHelpText>
    <label>KYC Tax ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>