FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Total_Value_Pymnts_Past_12_Months__c.field-meta.xml
<CustomField>
    <fullName>KYC_Total_Value_Pymnts_Past_12_Months__c</fullName>
    <inlineHelpText>Annual sum of payments business entity made in the past 12 months</inlineHelpText>
    <label>KYC Total Value Pymnts Past 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>