FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Trading_Name__c</fullName>
    <inlineHelpText>Pseudonym used by companies that do not operate under their registered company name</inlineHelpText>
    <label>KYC Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>