FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Typical_Pymnt_Size__c.field-meta.xml
<CustomField>
    <fullName>KYC_Typical_Pymnt_Size__c</fullName>
    <inlineHelpText>Most common payment size business entity processes</inlineHelpText>
    <label>KYC Typical Pymnt Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>