FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Vertical__c.field-meta.xml
<CustomField>
    <fullName>KYC_Vertical__c</fullName>
    <inlineHelpText>Education, Healthcare, B2B, Travel</inlineHelpText>
    <label>KYC Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>