FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Website__c.field-meta.xml
<CustomField>
    <fullName>KYC_Website__c</fullName>
    <inlineHelpText>Webpage address for business entity</inlineHelpText>
    <label>KYC Website</label>
    <type>Url</type>
</CustomField>