FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Website_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>KYC_Website_Reviewed__c</fullName>
    <inlineHelpText>KYC analyst has conducted WhoIs and visual inspection of entity website for red flags</inlineHelpText>
    <label>KYC Website Reviewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>