FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/KYC_Will_Process_Credit_Card_Pymnts__c.field-meta.xml
<CustomField>
    <fullName>KYC_Will_Process_Credit_Card_Pymnts__c</fullName>
    <label>KYC Will Process Credit Card Pymnts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>