FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Larg_PMNT_Size_Approved__c.field-meta.xml
<CustomField>
    <fullName>Larg_PMNT_Size_Approved__c</fullName>
    <description>Represents the largest payment value the client accepts on cards.</description>
    <inlineHelpText>Represents the largest payment value the client accepts on cards.</inlineHelpText>
    <label>Larg PMNT Size Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>