FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/MCC__c.field-meta.xml
<CustomField>
    <fullName>MCC__c</fullName>
    <description>Like SIC code, The Card Scheme&apos;s Merchant Category Code assigned by industry type.</description>
    <inlineHelpText>The Card Scheme&apos;s Merchant Category Code assigned by industry type.</inlineHelpText>
    <label>MCC</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>